acespace/frontend/src/styles/profile-styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

@keyframes fade-in {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
}

body {
    background-color: #222222;
}

.profilePage {
    position: relative;
    animation: fade-in 1s ease-in;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.navBar {
    margin-top: 2vmin;
}

.createProfileText {
    margin-left: 50%;
    transform: translateX(-50%);
}

.fieldTitles {
    display: flex;
    justify-content: space-between;
}

.coursesTakenTitle {
    /* display: flex; */
}

.courseTitles {
    display: flex;
    flex-wrap: wrap;
    width: 70vmax;
    margin-left: 28vmin;
}

.fields {
    display: flex;
    margin-bottom: 3.5vmin;
    justify-content: space-between;
}

@media (orientation: landscape) {
    .logo {
        margin-top: 4.5vmin;
        margin-left: 3vmin;
        width: 7vh;
        height: 4.5vh;
    }
}

@media (orientation: portrait) {
    .logo {
        margin-top: 7vmax;
        margin-left: 1.6vmax;
        width: 7vw;
        height: 4.5vw;
    }
}

.primaryText {
    color: #c35cf7;
}

.googleSignInText {
    font-family: 'Roboto', sans-serif;
    margin-right: 8px;
}

.searchField {
    position: relative;
}

.dropdown {
    list-style: none;
    background-color: #000000;
    border-radius: 8px;
    padding: 0;
    width: 35vmin;
    margin-left: 30vmin;
    margin-top: 1vmin;
    max-height: 15vmin; /* Adjust the maximum height as needed */
    overflow-y: auto;
}

.dropdownElement {
    color: #ffffff;
    padding: 1vmin;
    cursor: pointer;
    font-size: 1.5vmin;
    &:hover {
        background-color: #111111;
        color: #c35cf7;
    }
}

.saveButton {
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    bottom: 10vmin;
}

